add support tab kay

--- a/gulp-twig2php/index.html
+++ b/gulp-twig2php/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>gulp-twig2php | Demo</title>
 
@@ -7,22 +8,23 @@
 	<style>
 		@import url('https://fonts.googleapis.com/css?family=Ubuntu|Ubuntu+Mono');
 		@import url('//use.fontawesome.com/releases/v4.7.0/css/font-awesome-css.min.css');
-		
+
 		@font-face {
-		  font-family: 'FontAwesome';
-		  src: url('//use.fontawesome.com/releases/v4.7.0/fonts/fontawesome-webfont.eot');
-		  src: url('//use.fontawesome.com/releases/v4.7.0/fonts/fontawesome-webfont.eot?#iefix') format('embedded-opentype'),
-		       url('//use.fontawesome.com/releases/v4.7.0/fonts/fontawesome-webfont.woff2') format('woff2'),
-		       url('//use.fontawesome.com/releases/v4.7.0/fonts/fontawesome-webfont.woff') format('woff'),
-		       url('//use.fontawesome.com/releases/v4.7.0/fonts/fontawesome-webfont.ttf') format('truetype'),
-		       url('//use.fontawesome.com/releases/v4.7.0/fonts/fontawesome-webfont.svg#fontawesomeregular') format('svg');
-		  font-weight: normal;
-		  font-style: normal;
+			font-family: 'FontAwesome';
+			src: url('//use.fontawesome.com/releases/v4.7.0/fonts/fontawesome-webfont.eot');
+			src: url('//use.fontawesome.com/releases/v4.7.0/fonts/fontawesome-webfont.eot?#iefix') format('embedded-opentype'),
+			url('//use.fontawesome.com/releases/v4.7.0/fonts/fontawesome-webfont.woff2') format('woff2'),
+			url('//use.fontawesome.com/releases/v4.7.0/fonts/fontawesome-webfont.woff') format('woff'),
+			url('//use.fontawesome.com/releases/v4.7.0/fonts/fontawesome-webfont.ttf') format('truetype'),
+			url('//use.fontawesome.com/releases/v4.7.0/fonts/fontawesome-webfont.svg#fontawesomeregular') format('svg');
+			font-weight: normal;
+			font-style: normal;
 		}
 
-		html, body {
+		html,
+		body {
 			min-height: 100vh;
-  			height: 100%; 
+			height: 100%;
 		}
 
 		body {
@@ -39,18 +41,14 @@
 		}
 
 		main {
-			flex:1;
+			flex: 1;
 
 			display: flex;
 			flex-direction: column;
 		}
 
-
-
-
-
 		.tabs {
-			flex:1;
+			flex: 1;
 			display: flex;
 		}
 
@@ -63,34 +61,30 @@
 			border-left: none;
 		}
 
-
-
 		textarea {
 			width: 100%;
 			height: 100%;
-			
+
 			-webkit-box-sizing: border-box;
-            -moz-box-sizing: border-box;
-            box-sizing: border-box;
-			
+			-moz-box-sizing: border-box;
+			box-sizing: border-box;
+
 
 			color: #ABB2BF;
 			padding: 10px;
 
 			font-family: 'Ubuntu Mono', monospace;
-			resize:none;
+			resize: none;
 
-			border:1px solid #181A1F;
+			border: 1px solid #181A1F;
 			border-top: 4px solid #181A1F;
 			background-color: #282C34;
 			border-bottom: none;
-			
 		}
 
 		textarea:focus {
 			outline: none !important;
 			border-top-color: #568AF2;
-		
 		}
 
 		.buttons {
@@ -99,25 +93,25 @@
 		}
 
 		.btn {
-			border:1px solid #181A1F;
+			border: 1px solid #181A1F;
 			border-radius: 3px;
-			background-color: rgba(56,61,72,0.8);
-			color: rgba(219,219,219,0.8);
-			padding:6px 20px;
+			background-color: rgba(56, 61, 72, 0.8);
+			color: rgba(219, 219, 219, 0.8);
+			padding: 6px 20px;
 			display: inline-block;
 			text-decoration: none;
 		}
 
 		.btn:hover {
-			color: rgb(219,219,219);
-			background-color: rgb(56,61,72);
+			color: rgb(219, 219, 219);
+			background-color: rgb(56, 61, 72);
 		}
 
 		.console__header {
-			color:#ABB2BF;
-			font-size:0.75rem;
-			padding:10px;
-			border:1px solid #181A1F;
+			color: #ABB2BF;
+			font-size: 0.75rem;
+			padding: 10px;
+			border: 1px solid #181A1F;
 			background-color: #282C34;
 			position: relative;
 		}
@@ -127,13 +121,13 @@
 			right: 10px;
 
 			display: inline-block;
-    		font: normal normal normal 14px/1 FontAwesome;
-    		font-size: inherit;
-    		text-rendering: auto;
-            -webkit-font-smoothing: antialiased;
-            -moz-osx-font-smoothing: grayscale;
+			font: normal normal normal 14px/1 FontAwesome;
+			font-size: inherit;
+			text-rendering: auto;
+			-webkit-font-smoothing: antialiased;
+			-moz-osx-font-smoothing: grayscale;
 
-            cursor: pointer;
+			cursor: pointer;
 		}
 
 		.console__close[data-state="open"]:before {
@@ -145,7 +139,7 @@
 		}
 
 		.help {
-			color:#D7DAE0;
+			color: #D7DAE0;
 			text-align: center;
 			vertical-align: center;
 			opacity: 0.8;
@@ -153,142 +147,156 @@
 
 		.console__content {
 			white-space: pre;
-			padding:10px;
-			font-size:0.8rem;
+			padding: 10px;
+			font-size: 0.8rem;
 			line-height: 1.6;
-			color:#568AF2;
+			color: #568AF2;
 			max-height: 14vh;
 			overflow-y: auto;
 		}
 
 		::-webkit-scrollbar-button {
-			background-image:none;
-			width:7px;
-			height:0px
+			background-image: none;
+			width: 7px;
+			height: 0px
 		}
 
 		::-webkit-scrollbar-track {
-			background-color:transparent;
+			background-color: transparent;
 		}
 
 		::-webkit-scrollbar-thumb {
--webkit-border-radius: 3px;
-border-radius: 3px;
-background-color:#3C424E;
-}
+			-webkit-border-radius: 3px;
+			border-radius: 3px;
+			background-color: #3C424E;
+		}
 
-::-webkit-scrollbar-thumb:hover{
-background-color:#568AF2;
-}
+		::-webkit-scrollbar-thumb:hover {
+			background-color: #568AF2;
+		}
 
-::-webkit-resizer{
-background-image:none;
-width:6px;
-height:0px
-}
+		::-webkit-resizer {
+			background-image: none;
+			width: 6px;
+			height: 0px
+		}
 
-::-webkit-scrollbar {
-width: 4px;
-}
-
+		::-webkit-scrollbar {
+			width: 4px;
+		}
 	</style>
 </head>
+
 <body>
-<div class="wrapper">
-<main>
-	<div class="tabs">
-		<div class="tab"><textarea id="input" autofocus><a href="{{ row.link }}">{{ row.name }}</a></textarea></div>
-		<div class="tab">
-			<div id="help" class="help">
-				<h1>gulp-twig2php</h1>
-				<p>Compiles Twig Templates to native PHP using Twig.js</p>
-				<p><a target="_blank" class="btn" href="https://github.com/Garik-/gulp-twig2php"><i class="fa fa-github" aria-hidden="true"></i> View on GitHub</a></p>
-				<p>&nbsp;</p><h3><i class="fa fa-code" aria-hidden="true"></i> press ctrl + enter</h3>
+	<div class="wrapper">
+		<main>
+			<div class="tabs">
+				<div class="tab"><textarea id="input" autofocus><a href="{{ row.link }}">{{ row.name }}</a></textarea></div>
+				<div class="tab">
+					<div id="help" class="help">
+						<h1>gulp-twig2php</h1>
+						<p>Compiles Twig Templates to native PHP using Twig.js</p>
+						<p><a target="_blank" class="btn" href="https://github.com/Garik-/gulp-twig2php"><i class="fa fa-github" aria-hidden="true"></i> View on GitHub</a></p>
+						<p>&nbsp;</p>
+						<h3><i class="fa fa-code" aria-hidden="true"></i> press ctrl + enter</h3>
+					</div>
+					<textarea id="output" readonly placeholder="" style="display: none"></textarea></div>
 			</div>
-		<textarea id="output" readonly placeholder="" style="display: none"></textarea></div>
-  	</div>
-</main>
-<footer>
-<div id="console">
-	<div class="console__header">Console <span id="console_toggle" class="console__close" data-state="open"></i></span></div>
-	<div class="console__content" id="console_content"></div>
-</div>
-</footer>
-</div>
+		</main>
+		<footer>
+			<div id="console">
+				<div class="console__header">Console <span id="console_toggle" class="console__close" data-state="open"></i></span></div>
+				<div class="console__content" id="console_content"></div>
+			</div>
+		</footer>
+	</div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twig.js/0.8.9/twig.min.js"></script>
-<script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/twig.js/0.8.9/twig.min.js"></script>
+	<script>
+		var module = {},
+			options = {
+				debug: true
+			},
+			_console = {
+				log: function(message) {
+					var element = document.getElementById("console_content");
 
-	var module = {}, 
-		options = { debug: true },
-		_console = {
-			log:function(message) {
-				var element = document.getElementById("console_content");
+					if (message !== null && typeof message === 'object') {
+						message = JSON.stringify(message);
+					}
 
-				if(message !== null && typeof message === 'object') {
-					message = JSON.stringify(message);
+					element.appendChild(document.createTextNode(message + "\n"));
 				}
+			}
 
-				element.appendChild(document.createTextNode(message + "\n"));
+		function require(name) {
+			switch (name) {
+				case 'gulp-util':
+					return _console;
+				case 'twig':
+					return Twig;
 			}
 		}
-	
-	function require(name) {
-		switch(name) {
-			case 'gulp-util':
-				return _console;
-			case 'twig':
-				return Twig;
+	</script>
+	<script src="https://rawgit.com/Garik-/gulp-twig2php/master/parser.js"></script>
+	<script>
+		var parser = module.exports,
+			input = document.getElementById("input"),
+			output = document.getElementById("output"),
+			help = document.getElementById("help"),
+			console_toggle = document.getElementById("console_toggle"),
+			console_content = document.getElementById("console_content");
+
+		function pasteIntoInput(el, text) {
+			if (typeof el.selectionStart == 'number') {
+				var val = el.value;
+				var selStart = el.selectionStart;
+				el.value = val.slice(0, selStart) + text + val.slice(el.selectionEnd);
+				el.selectionEnd = el.selectionStart = selStart + text.length;
+			} else if (document.selection) {
+				var textRange = document.selection.createRange();
+				textRange.text = text;
+				textRange.collapse(false);
+				textRange.select();
+			}
 		}
-	}	
 
-</script>
-<script src="https://rawgit.com/Garik-/gulp-twig2php/master/parser.js"></script>
-<script>
+		input.onkeydown = function(e) {
 
-var parser = module.exports,
-	input = document.getElementById("input"), 
-	output = document.getElementById("output"),
-	help = document.getElementById("help"),
-	console_toggle = document.getElementById("console_toggle"),
-	console_content = document.getElementById("console_content");
+			if (e.ctrlKey && 13 == e.keyCode) { // Ctrl-Enter pressed
+				e.preventDefault();
 
+				output.value = parser(input.value, options);
 
-input.onkeydown = function(e) {
-	
-	if (e.ctrlKey && e.keyCode == 13) { // Ctrl-Enter pressed
-		e.preventDefault();
+				help.style.display = 'none';
+				output.removeAttribute("style");
+			}
 
-		output.value = parser(input.value, options);
+			if (9 == e.keyCode) { // tab
+				e.preventDefault();
+				pasteIntoInput(input, "\t");
+			}
 
-		help.style.display = 'none';
-		output.removeAttribute("style");
-  	}
+		}
 
-}
+		console_toggle.onclick = function(e) {
+			e.preventDefault();
 
+			var data = console_toggle.dataset;
 
-console_toggle.onclick = function(e) {
-	e.preventDefault();
+			switch (data.state) {
+				case 'open':
+					console_content.style.display = 'none';
+					data.state = "close";
 
-	var data = console_toggle.dataset;
-
-	switch(data.state) {
-		case 'open':
-			console_content.style.display = 'none';
-			data.state = "close";
-
-			break;
-		case 'close':
-			console_content.removeAttribute("style");
-			data.state = "open";
-			break;
-	}
-	
-
-
-
-}
-</script>
+					break;
+				case 'close':
+					console_content.removeAttribute("style");
+					data.state = "open";
+					break;
+			}
+		}
+	</script>
 </body>
+
 </html>
